cmake_minimum_required(VERSION 3.6)

project(TileMap)

if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/root/external/SDL3_image)
	add_subdirectory(root/external/SDL3)
	include_directories(root/external/SDL3/include)
else()
	message(FATAL_ERROR "Couldn't find SDL3")
endif()
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/root/external/SDL3_image)
	message("Found SDL3_image")
	add_subdirectory(root/external/SDL3_image)
	include_directories(root/external/SDL3_image/include)
endif()
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/root/external/SDL3_tff)
	message("Found SDL3_tff")
	add_subdirectory(root/external/SDL3_tff)
	include_directories(root/external/SDL3_tff/include)
endif()
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/root/external/SDL3_mixer)
	message("Found SDL3_mixer")
	add_subdirectory(root/external/SDL3_mixer)
	include_directories(root/external/SDL3_mixer/include)
endif()
if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/root/external/SDL3_net)
	message("Found SDL3_net")
	add_subdirectory(root/external/SDL3_net)
	include_directories(root/external/SDL3_net/include)
endif()

add_subdirectory(root)

